Updated with code for project 1

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,108 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Reproducible Research - Project 1"
+author: "dscitbox"
+date: "Sunday, October 19, 2014"
+output: html_document
 ---
+This file contains the solution to the first project in the Reproducible Research course
 
+###Part I: number of steps per day
+```{r load and prepare}
+library(data.table)
+library(plyr)
+library(ggplot2)
+dataset<-fread("activity.csv")
+goodsteps<-subset(dataset, subset = !is.na(steps))
+goodsteps$date<-as.Date(goodsteps$date)
+# summarize the number of steps (exclude the records missing data)
+steps<-ddply(goodsteps, .(date), summarise, sum(steps))
+colnames(steps)<-c("Date", "Sum")
+```
 
-## Loading and preprocessing the data
+1. A histogram showing the distribution of the total number of steps per day
+```{r, echo=FALSE}
+m <- ggplot(steps, aes(x=Sum))+xlab("Total number of steps per day")+ylab("Frequency (number of days)")
+m+geom_histogram(aes(fill = ..count..), binwidth=5000) + xlim(0, 25000)
+```
+2. The mean and median of the total of steps taken per day
+```{r, echo=F}
+meanTotal<-mean(steps$Sum)
+medianTotal<-median(steps$Sum)
+```
+      the mean is `r format(round(meanTotal, 2), nsmall = 2)` and the median is `r format(round(medianTotal, 2), nsmall = 2)`
 
+###Part II: average daily pattern
 
+1. Time series plot of the 5-minute intervals and number of steps taken, averaged across all days
+```{r daily patern}
+intervalSteps<-(ddply(goodsteps, .(interval), summarize, steps=mean(steps)))
+```
+```{r, echo=FALSE}
+ggplot(intervalSteps, aes(x=interval, y=steps)) + 
+   geom_line()+
+   xlab("Interval number")+
+   ylab("Number of steps")
+```
 
-## What is mean total number of steps taken per day?
+2. Finding the index of the 5-minute interval that contains the maximum number of steps
 
+      the 5-minute interval that on average across all the days in the dataset, contains the maximum number of steps is `r intervalSteps[intervalSteps$steps==max(intervalSteps$steps), 1]`
+      
+###Part III: Inputting missing values
+```{r missing values}
+nmissingvalues<-nrow(dataset[is.na(steps)])
+```
+1. The number of missing values is `r nmissingvalues`
+2. Filling the missing values with the average for that day
+```{r filling na data}
+# create a set with missing data from the original set
+datasetwna<-dataset       
+datasetwna$date<-as.Date(datasetwna$date)
+# make the number of steps numeric to be able to hold the average
+datasetwna$steps<-as.numeric(datasetwna$steps)
+# join with the average number of steps/interval
+x<-merge(x=datasetwna, y=intervalSteps, by="interval", all=T)
+# create a new column to hold the fixed steps
+x$steps<-x$steps.x
+# replace na's with the average number of steps
+x$steps[is.na(x$steps.x)]<-x$steps.y[is.na(x$steps.x)]
+# repeat the calculations from the first part
+fixedsteps<-ddply(x, .(date), summarise, sum(steps))
+# fix the column names
+colnames(fixedsteps)<-c("Date", "Sum")
 
+```
 
-## What is the average daily activity pattern?
+Plot the number of steps with filled in data
 
+```{r, echo=FALSE}
+m <- ggplot(fixedsteps, aes(x=Sum))+xlab("Total number of steps per day")+ylab("Frequency (number of days)")
+m+geom_histogram(aes(fill = ..count..), binwidth=5000) + xlim(0, 25000)
+```
 
+2. The mean and median of the total of steps taken per day
+```{r, echo=FALSE}
+meanTotal<-mean(fixedsteps$Sum)
+medianTotal<-median(fixedsteps$Sum)
 
-## Imputing missing values
+```
+      the mean of the fixed set is `r format(round(meanTotal, 2), nsmall = 2)` and the median is `r format(round(medianTotal, 2), nsmall = 2)`
+      
+      the number of days with steps between 10 and 15k has increased to over 30, but the mean and the median have remained the same
 
+### Part IV: Are there differences in activity patterns between weekdays and weekends
+```{r}
+# using the dataset with the number of steps fixed up
+x$weekday<-ifelse(weekdays(x$date)!="Saturday" & weekdays(x$date)!="Sunday", "Weekday", "Weekend")
+intervalSteps<-(ddply(x, .(interval, weekday), summarize, steps=mean(steps)))
+```
 
+```{r, echo=FALSE}
+ggplot(intervalSteps, aes(x=interval, y=steps)) +
+   facet_wrap(~weekday, nrow=2, ncol=1) +
+   geom_line()+
+   xlab("Interval number") +
+   ylab("Number of steps")
+```
 
-## Are there differences in activity patterns between weekdays and weekends?
+The graphs show that the weekend and weekday profiles have a similar distribution, with slightly increased activity during the weekend; the activity is more concentrated at the beginning of the day. In the weekend the activity is more spread out during the day 
